Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1571

It should not update last xid for replay open.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0, Lustre 2.1.5
    • Lustre 2.4.0
    • None
    • 3
    • 3980

      In recovery, it should not update last xid for open replay, otherwise it will mess the last xid in the last rcvd, which make the following resend (after replay) failed.

            green Oleg Drokin
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: