LU-1571 mdt: Do not update xid for open replay req

Do not update last_xid for open replay req,
otherwise the following resend(after replay)
can not be matched with correct xid.

Remove unnecessary mti_transo zero check in
mdt_empty_transno.

Signed-off-by: wang di <di.wang@whamcloud.com>
Change-Id: I2a05f3ac05b301ae31641a1dc51f8c4eed96427d