lustre/tests/recovery-small.sh
@@ -1415,6 +1415,30 @@ test_105()
 }
 run_test 105 "IR: NON IR clients support"
 
+test_106 () {
+	local CLIENT_PID
+	local close_pid
+
+	mkdir -p $DIR/$tdir
+	# OBD_FAIL_MDS_REINT_NET_REP   0x119
+	do_facet $SINGLEMDS lctl set_param fail_loc=0x119
+	multiop $DIR/$tdir D_c &
+	close_pid=$!
+	mkdir $DIR/$tdir/dir_106 &
+	CLIENT_PID=$!
+	do_facet $SINGLEMDS lctl set_param fail_loc=0
+	fail $SINGLEMDS
+
+	wait $CLIENT_PID || rc=$?
+	checkstat -t dir $DIR/$tdir/dir_106 || return 1
+
+	kill -USR1 $close_pid
+	wait $close_pid || return 2 
+
+	return $rc
+}
+run_test 106 "drop reint reply, then restart MDT"
+
 complete $(basename $0) $SECONDS
 check_and_cleanup_lustre
 exit_status
